--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="/download">Download YouTube Videos</a></li>
                 <li><a href="/convert">Convert Video to Audio</a></li>
-                <li><a href="/subtitles">Insert Subtitles to Video</a></li>
+                <li><a href="/subtitles">Insert Subtitles into Video</a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
             <div class="hero-buttons">
                 <a href="/download" class="button">Download YouTube Videos</a>
                 <a href="/convert" class="button">Convert Video to Audio</a>
-                <a href="/subtitles" class="button">Insert Subtitles to Video</a>
+                <a href="/subtitles" class="button">Insert Subtitles into Video</a>
             </div>
         </section>
     </main>
