--- a/templates/download.html
+++ b/templates/download.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="/download">Download YouTube Videos</a></li>
                 <li><a href="/convert">Convert Video to Audio</a></li>
-                <li><a href="/subtitles">Insert Subtitles to Video</a></li>
+                <li><a href="/subtitles">Insert Subtitles into Video</a></li>
             </ul>
         </nav>
     </header>
